Merge Dockerfile into the development branch
Dockerfile in both development and k8sdev should be the same.